kubernetes/apps/default/bazarr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: default
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bazarr
      app.kubernetes.io/instance: bazarr
      app.kubernetes.io/controller: bazarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bazarr
        app.kubernetes.io/instance: bazarr
        app.kubernetes.io/controller: bazarr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: app
          image: ghcr.io/home-operations/bazarr:1.5.6@sha256:79fc37491f55c7e24427bcd669bce3df2d7415ca432a47ce9d53cc5988af8411
          ports:
            - name: http
              containerPort: 80
          startupProbe:
            httpGet:
              path: /health
              port: 80
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe: &probe
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe: *probe
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: tmpfs
              mountPath: /config/cache
              subPath: cache
            - name: tmpfs
              mountPath: /config/log
              subPath: log
            - name: tmpfs
              mountPath: /tmp
              subPath: tmp
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr
        - name: media
          persistentVolumeClaim:
            claimName: synology-media
        - name: tmpfs
          emptyDir: {}
