kubernetes/apps/default/bazarr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: default
  labels:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/instance: bazarr
    app.kubernetes.io/controller: bazarr
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/instance: bazarr
    app.kubernetes.io/controller: bazarr
